# lacadia

./: .gitignore  CMakeLists.txt  README.md  TODO.md
assets/: icicle.mtl
assets/models/: bug.mtl  burn_particle.mtl  cloud.mtl  default_box.mtl  frost_particle.mtl  hunter.mtl  sphere.mtl
assets/shaders/: model_frag.glsl  model_vert.glsl  terrain_vert.glsl  texture_frag.glsl  texture_vert.glsl  water_frag.glsl  water_vert.glsl
design/: ASSASSIN.md  MAGE.md  RANGER.md
shaders/: fragment_shader.glsl  line_vertex_shader.glsl  model_vert.glsl  terrain_frag.glsl  terrain_vert.glsl  text_frag.glsl  text_vert.glsl  ui_vertex_shader.glsl  vertex_shader.glsl
src/: main.c
src/abilities/: CMakeLists.txt  ability.c  ability.h  arctic_winds.c  arctic_winds.h  burn.c  burn.h  combust.c  combust.h  crystalize.c  crystalize.h  dragons_breath.c  dragons_breath.h  effect.c  effect.h  fireball.c  fireball.h  frost.c  frost.h  frost_nova.c  frost_nova.h  ice_storm.c  ice_storm.h  icicle.c  icicle.h  melee_hit.c  melee_hit.h  spell.c  spell.h  spread_burn.c  spread_burn.h  teleport.c  teleport.h  wildfire.c  wildfire.h
src/collectables/: CMakeLists.txt  coin.c  coin.h  collectable.c  collectable.h
src/components/: CMakeLists.txt  affectable_component.c  affectable_component.h  collidable_component.c  collidable_component.h  component.c  component.h  renderable_component.c  renderable_component.h
src/effects/: CMakeLists.txt  burn.c  burn.h  effect.c  effect.h  frost.c  frost.h  hot.c  hot.h  permafrost.c  permafrost.h  soulburn.c  soulburn.h  speed.c  speed.h
src/enemies/: CMakeLists.txt  bug.c  bug.h  bug_spawner.c  bug_spawner.h  enemy.c  enemy.h
src/engine/: CMakeLists.txt  affectable_component.c  affectable_component.h  asset_manager.c  asset_manager.h  collidable_component.c  collidable_component.h  colors.h  component.c  component.h  game_level.h  game_object.c  game_object.h  game_world.c  game_world.h  level.c  level.h  particle_system.c  particle_system.h  renderable_component.c  renderable_component.h  wall.c  wall.h
src/engine/graphics/: CMakeLists.txt  line_shader.c  line_shader.h  model_shader.c  model_shader.h  renderer.c  renderer.h  shader.c  shader.h  terrain_shader.c  terrain_shader.h  text_shader.c  text_shader.h  texture_shader.c  texture_shader.h  water_shader.c  water_shader.h
src/engine/util/: CMakeLists.txt  array_list.c  array_list.h  camera.c  camera.h  inputs.c  inputs.h  line.h  mat4.c  mat4.h  obb.c  obb.h  object_model.c  object_model.h  rect.h  renderer.c  renderer.h  shader.h  simplex_noise.c  simplex_noise.h  sparse_array.c  sparse_array.h  string_helpers.c  string_helpers.h  terrain.c  terrain.h  vec3.c  vec3.h  vec4.h
src/game/: CMakeLists.txt  ability.c  ability.h  affectable_object.c  affectable_object.h  burn.c  burn.h  collidable_object.c  collidable_object.h  colors.h  combust.c  combust.h  effect.c  effect.h  fireball.c  fireball.h  frost.h  game_level.h  game_object.c  game_object.h  game_world.c  game_world.h  icicle.c  icicle.h  level.c  level.h  melee_hit.h  moveable_object.c  moveable_object.h  particle_system.c  particle_system.h  renderable_object.c  renderable_object.h  renderer.c  renderer.h  spell.c  spell.h  stats.h  wall.c  wall.h  (+2 more)
src/lacadia/: CMakeLists.txt  cloud.c  cloud.h  coin.c  coin.h  main.c
src/lacadia/abilities/: CMakeLists.txt  ability.c  ability.h  arctic_winds.c  combust.c  crystalize.c  dragons_breath.c  fireball.c  frost_nova.c  icicle.c  melee_hit.c  spell.c  spell.h  wildfire.c
src/lacadia/collectables/: CMakeLists.txt  collectable.c
src/lacadia/effects/: CMakeLists.txt  affectable_component.c  affectable_component.h  burn.c  effect.c  effect.h  frost.c  frost.h  permafrost.c  soulburn.c
src/lacadia/enemies/: bug.c  bug.h  bug_spawner.c  bug_spawner.h  enemy.c  enemy.h
src/lacadia/players/: CMakeLists.txt  mage.c  mage.h  player.c  player.h
src/players/: CMakeLists.txt  character_dev.txt  mage.c  mage.h  player.c  player.h
src/util/: CMakeLists.txt  array_list.c  array_list.h  axis.c  axis.h  camera.c  camera.h  game_object.c  game_object.h  game_world.c  game_world.h  inputs.c  inputs.h  line.h  log.c  log.h  mat4.c  mat4.h  obb.c  obb.h  object_model.c  object_model.h  random.c  random.h  rect.c  rect.h  renderer.c  renderer.h  set.c  set.h  shader.c  shader.h  shaders.c  shaders.h  simplex_noise.c  string_helpers.c  string_helpers.h  terrain.c  terrain.h  vec3.c  (+1 more)
